--- a/view/common/block-layout/item-showcase-openseadragon-dark-metadata.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-dark-metadata.phtml
@@ -60,7 +60,7 @@ $itemCount = count($this->attachments);
                             ?>
                         <?php endif; ?>
                         <div class="learn-more">
-                            <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
+                            <h2 class="button medium warning"><?php echo $item->link("View full item"); ?></h2>
                         </div>
                 </div>
             </div>
