Revised padding for Item Showcase blocks

--- a/view/common/block-layout/item-showcase-openseadragon-dark-metadata.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-dark-metadata.phtml
@@ -14,7 +14,7 @@ $itemCount = count($this->attachments);
             </div>
         <?php endif; ?>
     </div>
-    <div class="col-container col-media-container medium-padding-1 grid-container">
+    <div class="col-container col-media-container padding-vertical-1 grid-container">
         <?php foreach ($attachments as $attachment): ?>
             <div class="item-showcase item-showcase-openseadragon item resource margin-bottom-3 text-center  item-count-<?php echo $itemCount; ?>">
                 <?php
