--- a/view/common/block-layout/item-showcase-openseadragon-full-width-no-button.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-full-width-no-button.phtml
@@ -13,7 +13,7 @@ $itemCount = count($this->attachments);
     <?php endif; ?>
 </div>
 <div class="full-width-css padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
-    <div class="col-container col-media-container medium-padding-1">
+    <div class="col-container col-media-container padding-vertical-1">
         <?php foreach ($attachments as $attachment): ?>
             <div class="item-showcase item-showcase-openseadragon item resource margin-bottom-3 text-center item-count-<?php echo $itemCount; ?>">
                 <?php
