--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -39,7 +39,7 @@ $this->headScript()->appendFile($this->assetUrl('js/annona.js'));
             <div class="caption padding-1"><?php echo $caption; ?></div>
         <?php endif; ?>
         <div class="learn-more">
-            <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
+            <h2 class="hollow button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
         </div>
     </div>
 <?php endforeach; ?>
