--- a/view/common/block-layout/item-showcase-multiples-full-width.phtml
+++ b/view/common/block-layout/item-showcase-multiples-full-width.phtml
@@ -44,9 +44,9 @@
                     <?php endif; ?>
             <div class="learn-more">
                 <?php if ($currentLocale == 'es'): ?>
-                    <h2 class="button medium warning"><?php echo $item->link("Ver más"); ?></h2>
+                    <h2 class="button medium warning hollow"><?php echo $item->link("Ver más"); ?></h2>
                 <?php else: ?>
-                    <h2 class="button medium warning"><?php echo $item->link("View full item"); ?></h2>
+                    <h2 class="button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
                 <?php endif; ?>
             </div>
                 </div>
