--- a/view/common/block-layout/item-showcase-no-image.phtml
+++ b/view/common/block-layout/item-showcase-no-image.phtml
@@ -50,7 +50,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
                         <?php endif;
                         ?>
                     <div class="learn-more">
-                        <h2 class="button medium warning"><?php echo $item->link("View full item"); ?></h2>
+                        <h2 class="button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
                     </div>
                 </div>
             </div>
