--- a/view/common/block-layout/item-showcase.phtml
+++ b/view/common/block-layout/item-showcase.phtml
@@ -39,7 +39,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
 				<div class="caption grid-container margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
 			<?php endif; ?>
 			<div class="learn-more">
-				<h2 class="button medium warning"><?php echo $item->link("View full item"); ?></h2>
+				<h2 class="button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
 			</div>
 		</div>
 	</div>
