--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -167,7 +167,7 @@ $bannerPosition = ($this->themeSetting('banner_position')) ? str_replace('_', '-
           $(document).foundation(); 
         </script> 
         <?php 
-        session_start(); // Ensure sessions are started
+        // session_start(); // Ensure sessions are started
         // Get the site's slug 
         $getSiteSlug = $site->slug();
         // Define an array of slugs that should load the script
