--- a/view/common/block-layout/resource-text-toggle-caption.phtml
+++ b/view/common/block-layout/resource-text-toggle-caption.phtml
@@ -28,7 +28,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en';
         <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file toggle-caption-img large-5 xlarge-4 flex-container align-self-middle align-center max-block-height">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file toggle-caption-img medium-6 large-5 xlarge-4 flex-container align-self-middle align-center max-block-height">
     <div class="attachments">
             <?php
             foreach ($attachments as $attachment):
