--- a/view/common/block-layout/item-showcase-openseadragon-full-width-dark.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-full-width-dark.phtml
@@ -48,9 +48,9 @@ $itemCount = count($this->attachments);
                     <?php endif; ?>
             <div class="learn-more">
                 <?php if ($currentLocale == 'es'): ?>
-                    <h2 class="button medium warning hollow"><?php echo $item->link("Ver más"); ?></h2>
+                    <p class="button medium warning hollow"><?php echo $item->link("Ver más"); ?></h2>
                 <?php else: ?>
-                    <h2 class="button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
+                    <p class="button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
                 <?php endif; ?>
             </div>
                 </div>
