--- a/view/common/block-layout/item-showcase-block-metadata.phtml
+++ b/view/common/block-layout/item-showcase-block-metadata.phtml
@@ -62,7 +62,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
                     <?php endif;
                     ?>
                 <div class="learn-more">
-                    <h2 class="button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
+                    <p class="button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
                 </div>
             </div>
         </div>
