--- a/view/common/block-layout/resource-text-container.phtml
+++ b/view/common/block-layout/resource-text-container.phtml
@@ -99,9 +99,9 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
         </div>
         <div class="learn-more">
             <?php if ($currentLocale == 'es'): ?>
-                <h2 class="button medium warning hollow"><?php echo $item->link("Ver más"); ?></h2>
+                <p class="button medium warning hollow"><?php echo $item->link("Ver más"); ?></h2>
             <?php else: ?>
-                <h2 class="button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
+                <p class="button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
             <?php endif; ?>
         </div>
     </div>
