--- a/view/common/block-layout/resource-text-sensitive-content.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content.phtml
@@ -108,9 +108,9 @@ endforeach; ?>
         </div>
         <div class="learn-more">
             <?php if ($currentLocale == 'es'): ?>
-                <h2 class="button medium warning hollow"><?php echo $item->link("Ver más"); ?></h2>
+                <p class="button medium warning hollow"><?php echo $item->link("Ver más"); ?></h2>
             <?php else: ?>
-                <h2 class="button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
+                <p class="button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
             <?php endif; ?>
         </div>
     </div>
