--- a/view/common/block-layout/item-showcase-openseadragon-dark-metadata.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-dark-metadata.phtml
@@ -9,7 +9,7 @@ $itemCount = count($this->attachments);
 <div class="full-width-css background-colour-uom-footer padding-1 large-padding-2 xlarge-padding-3">
     <div class="grix-x grid-container background-colour-uom-footer">
         <?php if (!empty($heading)): ?>
-            <div class="media-text-heading medium-offset-1 large-offset-2">
+            <div class="media-text-heading">
                 <h2 class="h2 padding-vertical-1"><?= $heading ?></h2>
             </div>
         <?php endif; ?>
