--- a/view/common/block-layout/resource-text.phtml
+++ b/view/common/block-layout/resource-text.phtml
@@ -24,7 +24,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
 
 <div class="block media-text grid-x grid-padding-x align-spaced align-middle full-width-css">
     <?php if (!empty($heading)): ?>
-    <div class="media-text-heading medium-offset-1 large-offset-2">
+    <div class="media-text-heading">
         <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
