--- a/view/common/block-layout/item-showcase-block-full-width.phtml
+++ b/view/common/block-layout/item-showcase-block-full-width.phtml
@@ -5,7 +5,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
 
 <div class="grix-x grid-container">
     <?php if (!empty($heading)): ?>
-        <div class="media-text-heading medium-offset-1 large-offset-2">
+        <div class="media-text-heading">
             <h2 class="h2 padding-vertical-1"><?= $heading ?></h2>
         </div>
     <?php endif; ?>
