--- a/view/common/block-layout/resource-text-openseadragon-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-dark.phtml
@@ -25,7 +25,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
 
 <div class="block media-text full-width-css grid-x grid-padding-x background-colour-uom-footer">
     <?php if (!empty($heading)): ?>
-    <div class="media-text-heading medium-offset-1 large-offset-2 margin-bottom-1">
+    <div class="media-text-heading margin-bottom-1">
         <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
