--- a/view/common/block-layout/resource-text-sensitive-content.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content.phtml
@@ -22,7 +22,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US'; ?>
 
 <div class="sensitive-material block media-text grid-x grid-padding-x align-spaced">
     <?php if (!empty($heading)): ?>
-    <div class="media-text-heading medium-offset-1 large-offset-2">
+    <div class="media-text-heading">
         <h2 class="h2 padding-vertical-1 margin-bottom-1"><?=$escape($heading) ?></h2>
     </div>
     <?php
