--- a/view/common/block-layout/resource-text-video-16_9.phtml
+++ b/view/common/block-layout/resource-text-video-16_9.phtml
@@ -26,7 +26,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
 
 <div class="block full-width-css media-text grid-x grid-padding-x full-width-css padding-1-medium-up align-spaced">
     <?php if (!empty($heading)): ?>
-    <div class="media-text-heading medium-offset-1 large-offset-2">
+    <div class="media-text-heading">
     <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
