--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -14,6 +14,15 @@ $thumbnail-shadow-hover: 0 0 6px 1px rgba($primary-color, 0.5);
 @import 'foundation-core';
 @import 'omeka';
 
+h2 {
+  @include breakpoint(medium) {
+    font-size: rem-calc(22);
+  }
+  @include breakpoint(large) {
+    font-size: 1.75rem;
+  }
+}
+
 .site-title {
   padding-left: $global-padding;
   max-width: calc(100vw - rem-calc(120));
