Removed grid-container from Item Showcase caption

--- a/view/common/block-layout/item-showcase-block-align-middle-full-width.phtml
+++ b/view/common/block-layout/item-showcase-block-align-middle-full-width.phtml
@@ -41,7 +41,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
                     $caption = $attachment->caption();             
                     if ($caption):
                         ?>
-                        <div class="caption grid-container margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
+                        <div class="caption margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
                     <?php endif; ?>
                     <div class="learn-more">
                         <?php if ($currentLocale == 'es'): ?>
