--- a/view/common/block-layout/item-showcase-openseadragon-full-width-dark.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-full-width-dark.phtml
@@ -44,7 +44,7 @@ $itemCount = count($this->attachments);
                     $caption = $attachment->caption();             
                     if ($caption):
                         ?>
-                        <div class="caption grid-container margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
+                        <div class="caption margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
                     <?php endif; ?>
             <div class="learn-more">
                 <?php if ($currentLocale == 'es'): ?>
