--- a/view/common/block-layout/item-showcase.phtml
+++ b/view/common/block-layout/item-showcase.phtml
@@ -36,7 +36,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
 			$caption = $attachment->caption();             
 			if ($caption):
 				?>
-				<div class="caption grid-container margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
+				<div class="caption margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
 			<?php endif; ?>
 			<div class="learn-more">
 				<p class="button medium warning hollow"><?php echo $item->link("View full item"); ?></h2>
